$Id: ChangeLog,v 1.243 2005/07/14 08:57:53 freckle Exp $

2005-07-13  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * arch/avr/os/thread.c: Rewrote CS in NutThreadCreate
    * os/thread.c: Rewrote CS in NutThreadSetPriority

2005-07-13  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * os/event.c: Rewrote NutEventWait to gain short critical sections
    
2005-07-12  Ole Reinhardt <ole.reinhardt@embedded-it.de>
    * os/timer.c: Added NULL pointer check in NutTimerProcessElapsed

2005-07-12  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * os/threads.c: Found and fixed this bug: 
    http://permalink.gmane.org/gmane.comp.hardware.microcontrollers.ethernut/4023
    NutThreadWake changed readyQueue without critical section
    Improved docu on NutThreadRemoveQueue and NutThreadAddPriQueue
    Removed critical section from NutSleep

    * os/timer.c: extracted timer creation from NutTimerStartTicks into NutTimerCreate

    * os/event.c: added missing critical section in NutEventTimeout. It can
    cause the same problems as the missing CS in NutThreadWake for the same
    reason.
    Removed unnecessary critical sections in NutEventPost, NutEventWait.
    Reduced CS in NutEventWaitNext 
    
    * os /osdebug.c: removed critical sections from various functions 
    as thread and timer lists are not changed by IRQ anymore
    
2005-07-07  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * os/timer.c: Stopped timers are removed by NutTimerProcessElapsed
    now. NutTimerStopAsync does not set tn_ticks to zero and relies
    on NutTimerProcessElapsed to do so when removing the stopped timer.
    This assures that a stopped timer is removed on next thread switch
    instead of staying in the nutTimerList until all previous timers 
    are elapsed.
    
2005-06-22  Matthias Ringwald  <mringwal@.inf.ethz.ch>
    * dev/null.c, include/dev/null.h: added /dev/null as devNull.
    write always returns len of bytes to write, read returns